# GasInABox

./: Cargo.toml  README.md  build.tmp  input.gbi
documentation/: about.md  bugs.md  compiling.md  license.md  todo.md  usage.md
src/: channelstructs.rs  constants.rs  main.rs
src/averages/: distributiontracker.rs  mod.rs
src/eyecandy/: graphparameters.rs  mod.rs  physicalparameters.rs  textparameters.rs
src/fakesimd/: mod.rs
src/fileio/: mod.rs
src/gasbox/: calculationparameters.rs  mod.rs  physicalparameters.rs  sectorgrid.rs  trackedparameters.rs
